--- a/debian/rules
+++ b/debian/rules
@@ -26,7 +26,7 @@ UBOOT_TARGETS = qemu_mips
 TARGET_FORMAT = u-boot.img
 else
 ifeq ($(DEB_HOST_ARCH),mipsel)
-UBOOT_TARGETS = dbau1100_config
+UBOOT_TARGETS = dbau1100
 TARGET_FORMAT = u-boot.img
 else
 ifeq ($(DEB_HOST_ARCH),avr32)
@@ -34,7 +34,7 @@ UBOOT_TARGETS = hammerhead
 TARGET_FORMAT = u-boot.img
 else
 ifeq ($(DEB_HOST_ARCH),sh4)
-UBOOT_TARGETS = espt
+UBOOT_TARGETS = sh7785lcr_32bit
 TARGET_FORMAT = u-boot.img
 else
 UBOOT_TARGETS =
