--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: u-boot
 Section: admin
 Priority: optional
-Maintainer: Clint Adams <schizo@debian.org>
+Maintainer: Clint Adams <clint@gnu.org>
 Standards-Version: 3.9.1
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Git: git://git.debian.org/collab-maint/u-boot.git
