--- a/debian/control
+++ b/debian/control
@@ -2,6 +2,7 @@ Source: u-boot
 Section: admin
 Priority: optional
 Maintainer: Clint Adams <clint@gnu.org>
+Uploaders: Loïc Minier <lool@debian.org>
 Standards-Version: 3.9.1
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Git: git://git.debian.org/collab-maint/u-boot.git
@@ -9,13 +10,26 @@ Vcs-Browser: http://git.debian.org/?p=collab-maint/u-boot.git;a=summary
 
 Package: u-boot
 Architecture: any
-Section: admin
-Depends: ${shlibs:Depends}
-Conflicts: uboot-mkimage
-Replaces: uboot-mkimage
 Description: A boot loader for embedded systems
  Das U-Boot is a cross-platform bootloader for embedded systems,
  used as the default boot loader by several board vendors.  It is
  intended to be easy to port and to debug, and runs on many
  supported architectures, including PPC, ARM, MIPS, x86, m68k,
  NIOS, and Microblaze.
+
+Package: u-boot-tools
+Architecture: any
+Depends: ${shlibs:Depends}
+Breaks: uboot-mkimage (<= 0.4build1), u-boot (<< 2010.12-2)
+Replaces: uboot-mkimage (<= 0.4build1), u-boot (<< 2010.12-2)
+Description: companion tools for Das U-Boot
+ Collection of tools useful along the U-Boot bootloader found in the u-boot
+ package.
+
+Package: uboot-mkimage
+Architecture: all
+Depends: u-boot-tools
+Description: generate kernel image for U-Boot (transitional package)
+ Package to ease upgrading from uboot-mkimage to u-boot-tools.
+ .
+ This package may safely be removed.
