--- a/debian/rules
+++ b/debian/rules
@@ -1,103 +1,102 @@
 #!/usr/bin/make -f
-INSTALL = install
-INSTALL_FILE    = $(INSTALL) -p    -o root -g root  -m  644
-INSTALL_PROGRAM = $(INSTALL) -p    -o root -g root  -m  755
-INSTALL_SCRIPT  = $(INSTALL) -p    -o root -g root  -m  755
-INSTALL_DIR     = $(INSTALL) -p -d -o root -g root  -m  755
 
-package=u-boot
+INSTALL_FILE    := install -m 644
+INSTALL_PROGRAM := install -m 755
+INSTALL_DIR     := install -m 755 -d
 
-DEB_HOST_ARCH := $(shell dpkg-architecture -qDEB_HOST_ARCH)
+compat_package := uboot-mkimage
+package := u-boot
+tools_package := u-boot-tools
 
-ifeq ($(DEB_HOST_ARCH),powerpc)
-UBOOT_TARGETS = ZUMA
-TARGET_FORMAT = u-boot.img
-else
-ifeq ($(DEB_HOST_ARCH),armel)
-UBOOT_TARGETS = sheevaplug guruplug openrd_base dockstar
-TARGET_FORMAT = u-boot.kwb
-else
-ifeq ($(DEB_HOST_ARCH),i386)
-UBOOT_TARGETS = eNET
-TARGET_FORMAT = u-boot.bin
-else
-ifeq ($(DEB_HOST_ARCH),mips)
-UBOOT_TARGETS = qemu_mips
-TARGET_FORMAT = u-boot.img
-else
-ifeq ($(DEB_HOST_ARCH),mipsel)
-UBOOT_TARGETS = dbau1100
-TARGET_FORMAT = u-boot.img
-else
-ifeq ($(DEB_HOST_ARCH),avr32)
-UBOOT_TARGETS = hammerhead
-TARGET_FORMAT = u-boot.img
-else
-ifeq ($(DEB_HOST_ARCH),sh4)
-UBOOT_TARGETS = sh7785lcr_32bit r2dplus
-TARGET_FORMAT = u-boot.img
-else
-UBOOT_TARGETS =
-TARGET_FORMAT =
+DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
+DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
+DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+
+ifneq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
+export CROSS_COMPILE := $(DEB_HOST_GNU_TYPE)-
 endif
-endif
-endif
-endif
-endif
-endif
-endif
+
+# the upstream build passes LDFLAGS directly to ld instead of calling gcc for
+# linking; so instead of passing -Wl,foo in LDFLAGS as in automake builds, one
+# should set LDFLAGS to foo directly
+comma := ,
+LDFLAGS := $(patsubst -Wl$(comma)%,%,$(LDFLAGS))
 
 build:
 	$(checkdir)
 
-	$(MAKE) mrproper
-
-ifneq ($(UBOOT_TARGETS),)
-	for i in $(UBOOT_TARGETS); do \
-	$(MAKE) clean; \
-	$(MAKE) $${i}_config; \
-	$(INSTALL) -d -m 755 debian/$(package)/usr/lib/$(package)/$${i}; \
-        $(MAKE) $(TARGET_FORMAT) && \
-	$(INSTALL) -p -m 644 $(TARGET_FORMAT) debian/$(package)/usr/lib/$(package)/$${i} && \
-	$(INSTALL) -p -m 644 u-boot debian/$(package)/usr/lib/$(package)/$${i}/uboot.elf && \
-	strip debian/$(package)/usr/lib/$(package)/$${i}/uboot.elf; \
+	set -e; sed -n 's/^$(DEB_HOST_ARCH)[[:space:]]\+//p' debian/targets \
+	    | while read platform target; do \
+	        builddir=`pwd`/debian/build/$$platform; \
+	        installdir=debian/$(package)/usr/lib/$(package)/$$platform; \
+	        mkdir -p $$builddir; \
+	        $(MAKE) O=$$builddir $${platform}_config; \
+	        $(MAKE) O=$$builddir $$builddir/$$target; \
+	        $(INSTALL_DIR) $$installdir; \
+	        $(INSTALL_FILE) $$builddir/$$target $$installdir; \
+	        $(INSTALL_FILE) $$builddir/u-boot $$installdir/uboot.elf; \
+	        $(CROSS_COMPILE)strip $$installdir/uboot.elf; \
 	done
-else
-	$(MAKE) tools
+
+ifeq ($(CROSS_COMPILE),)
+	# board-independent tools
+	$(MAKE) HOSTCC=$(CROSS_COMPILE)gcc HOSTSTRIP=$(CROSS_COMPILE)strip \
+	    tools-all
+	$(INSTALL_DIR) debian/$(tools_package)/usr/bin/
+	$(INSTALL_PROGRAM) tools/mkimage debian/$(tools_package)/usr/bin/
 endif
 
-	$(INSTALL) -d -m 755 debian/$(package)/usr/bin
-	for i in envcrc gen_eth_addr img2srec jtagconsole mkimage ncb netconsole; do \
-		test -f tools/$${i} && $(INSTALL) -p -m 755 tools/$${i} debian/$(package)/usr/bin/; \
-		done
-	touch build
+	touch $@
 
 clean:
 	$(checkdir)
-	-rm -f build
-	if test -f Makefile; then $(MAKE) distclean; fi
-	-rm -f `find . -name "*~"` \
-	        debian/files* core debian/*ubstvars
-	-rm -rf debian/u-boot
+	rm -f debian/files debian/*.substvars
+	rm -rf debian/$(compat_package) debian/$(package) debian/$(tools_package)
+	rm -f build
+	$(MAKE) distclean
+	rm -rf arch/arm/include/asm/arch arch/arm/include/asm/proc
+	rm -rf debian/build
+	rm -f `find . -name "*~"`
 
 binary-indep:	checkroot
 	$(checkdir)
 
+	$(INSTALL_DIR) debian/$(compat_package)/DEBIAN
+	$(INSTALL_DIR) debian/$(compat_package)/usr/share/doc/$(compat_package)/
+
+	$(INSTALL_FILE) debian/copyright \
+	    debian/$(compat_package)/usr/share/doc/$(compat_package)/
+	$(INSTALL_FILE) debian/changelog \
+	    debian/$(compat_package)/usr/share/doc/$(compat_package)/changelog.Debian
+
+	gzip -9f `find debian/$(compat_package)/usr/share/doc -type f ! -name "copyright"`
+	dpkg-gencontrol -ldebian/changelog -isp -p$(compat_package) -Tdebian/$(compat_package).substvars -Pdebian/$(compat_package)
+	cd debian/$(compat_package) && find * -type f ! -regex '^DEBIAN/.*' -print0 | xargs -r0 md5sum > DEBIAN/md5sums
+
+	chown -R root:root debian/$(compat_package)
+	chmod -R go=rX debian/$(compat_package)
+
+	dpkg --build debian/$(compat_package) ..
+
 binary-arch:	checkroot build
 	$(checkdir)
 
-	cd debian/$(package) && $(INSTALL_DIR) usr/share/doc/$(package) \
-		usr/share/lintian/overrides \
-		DEBIAN
+	$(INSTALL_DIR) debian/$(package)/DEBIAN
 
-	$(INSTALL_FILE) debian/README.Debian debian/$(package)/usr/share/doc/$(package)/
-	$(INSTALL_FILE) debian/copyright debian/$(package)/usr/share/doc/$(package)/copyright
-	$(INSTALL_FILE) debian/changelog debian/$(package)/usr/share/doc/$(package)/changelog.Debian
-	$(INSTALL_FILE) debian/lintian.overrides debian/$(package)/usr/share/lintian/overrides/$(package)
+	$(INSTALL_DIR) debian/$(package)/usr/share/doc/$(package)/
+	$(INSTALL_FILE) debian/README.Debian \
+	    debian/$(package)/usr/share/doc/$(package)/
+	$(INSTALL_FILE) debian/copyright \
+	    debian/$(package)/usr/share/doc/$(package)/
+	$(INSTALL_FILE) debian/changelog \
+	    debian/$(package)/usr/share/doc/$(package)/changelog.Debian
+
+	$(INSTALL_DIR) debian/$(package)/usr/share/lintian/overrides/
+	$(INSTALL_FILE) debian/lintian.overrides \
+	    debian/$(package)/usr/share/lintian/overrides/$(package)
 
 	gzip -9f `find debian/$(package)/usr/share/doc -type f ! -name "copyright"`
-	dpkg-shlibdeps -Tdebian/substvars debian/$(package)/usr/bin/mkimage
-	dpkg-gencontrol -ldebian/changelog -isp -p$(package) -Tdebian/substvars -Pdebian/u-boot
+	dpkg-gencontrol -ldebian/changelog -isp -p$(package) -Tdebian/$(package).substvars -Pdebian/$(package)
 	cd debian/$(package) && find * -type f ! -regex '^DEBIAN/.*' -print0 | xargs -r0 md5sum > DEBIAN/md5sums
 
 	chown -R root:root debian/$(package)
@@ -105,11 +104,35 @@ binary-arch:	checkroot build
 
 	dpkg --build debian/$(package) ..
 
+
+	$(INSTALL_DIR) debian/$(tools_package)/DEBIAN
+
+	$(INSTALL_DIR) debian/$(tools_package)/usr/share/doc/$(tools_package)/
+	$(INSTALL_FILE) debian/copyright     debian/$(tools_package)/usr/share/doc/$(tools_package)/
+	$(INSTALL_FILE) debian/changelog     debian/$(tools_package)/usr/share/doc/$(tools_package)/changelog.Debian
+
+	$(INSTALL_DIR) debian/$(tools_package)/usr/share/man/man1
+	$(INSTALL_FILE) doc/mkimage.1 debian/$(tools_package)/usr/share/man/man1/
+
+	gzip -9f `find debian/$(tools_package)/usr/share/doc -type f ! -name "copyright"`
+	gzip -9f `find debian/$(tools_package)/usr/share/man -type f`
+
+	# XXX misses board-specific envcrc tool
+	dpkg-shlibdeps -Tdebian/$(tools_package).substvars \
+	    debian/$(tools_package)/usr/bin/mkimage
+	dpkg-gencontrol -ldebian/changelog -isp -p$(tools_package) -Tdebian/$(tools_package).substvars -Pdebian/$(tools_package)
+	cd debian/$(tools_package) && find * -type f ! -regex '^DEBIAN/.*' -print0 | xargs -r0 md5sum > DEBIAN/md5sums
+
+	chown -R root:root debian/$(tools_package)
+	chmod -R go=rX debian/$(tools_package)
+
+	dpkg --build debian/$(tools_package) ..
+
 define checkdir
 	test -f debian/rules
 endef
 
-binary:		binary-arch
+binary:		binary-arch binary-indep
 
 prebuild:
 	@true
