openrd-client-and-ultimate.diff
No DEP3 Subject or Description header found

Gbp-Pq: openrd-client-and-ultimate.diff.

--- a/boards.cfg
+++ b/boards.cfg
@@ -96,7 +96,9 @@ davinci_sonata               arm         arm926ejs   sonata              davinci
 suen3                        arm         arm926ejs   km_arm              keymile        kirkwood
 guruplug                     arm         arm926ejs   -                   Marvell        kirkwood
 mv88f6281gtw_ge              arm         arm926ejs   -                   Marvell        kirkwood
-openrd_base                  arm         arm926ejs   -                   Marvell        kirkwood
+openrd_base                  arm         arm926ejs   openrd_base         Marvell        kirkwood        openrd_base:BOARD_IS_OPENRD_BASE
+openrd_client                arm         arm926ejs   openrd_base         Marvell        kirkwood        openrd_base:BOARD_IS_OPENRD_CLIENT
+openrd_ultimate              arm         arm926ejs   openrd_base         Marvell        kirkwood        openrd_base:BOARD_IS_OPENRD_ULTIMATE
 rd6281a                      arm         arm926ejs   -                   Marvell        kirkwood
 sheevaplug                   arm         arm926ejs   -                   Marvell        kirkwood
 dockstar                     arm         arm926ejs   -                   Seagate        kirkwood
