--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Clint Adams <clint@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>
-Standards-Version: 3.9.1
+Standards-Version: 3.9.2
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Git: git://git.debian.org/collab-maint/u-boot.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/u-boot.git;a=summary
@@ -26,10 +26,7 @@ Breaks: uboot-envtools (<< 20081215-3~),
 Replaces: uboot-envtools (<< 20081215-3~),
           uboot-mkimage (<= 0.4build1),
           u-boot (<< 2010.12-2)
-Description: companion tools for Das U-Boot
- Collection of tools useful along the U-Boot bootloader found in the u-boot
- package.
- .
+Description: companion tools for Das U-Boot bootloader
  This package includes the mkimage program, which allows generation of U-Boot
  images in various formats, and the fw_printenv and fw_setenv programs to read
  and modify U-Boot's environment.
