--- a/debian/control
+++ b/debian/control
@@ -5,8 +5,8 @@ Maintainer: Clint Adams <clint@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>
 Standards-Version: 3.9.2
 Homepage: http://www.denx.de/wiki/U-Boot/
-Vcs-Git: git://git.debian.org/collab-maint/u-boot.git
-Vcs-Browser: http://git.debian.org/?p=collab-maint/u-boot.git;a=summary
+XS-Debian-Vcs-Git: git://git.debian.org/collab-maint/u-boot.git
+XS-Debian-Vcs-Browser: http://git.debian.org/?p=collab-maint/u-boot.git;a=summary
 
 Package: u-boot
 Architecture: any
