--- a/debian/rules
+++ b/debian/rules
@@ -7,8 +7,6 @@ INSTALL_DIR     := install -m 755 -d
 version := $(shell dpkg-parsechangelog | sed -n 's/^Version: //p')
 tools_version := 20081215-3+$(version)
 
-env_package := uboot-envtools
-mkimage_package := uboot-mkimage
 package := u-boot
 tools_package := u-boot-tools
 
@@ -73,7 +71,7 @@ endif
 clean:
 	$(checkdir)
 	rm -f debian/files debian/*.substvars
-	rm -rf debian/$(env_package) debian/$(mkimage_package) debian/$(package) debian/$(tools_package)
+	rm -rf debian/$(package) debian/$(tools_package)
 	rm -f build-arch
 	$(MAKE) distclean
 	rm -rf arch/arm/include/asm/arch arch/arm/include/asm/proc
@@ -82,41 +80,6 @@ clean:
 
 binary-indep:	checkroot
 	$(checkdir)
-
-	$(INSTALL_DIR) debian/$(mkimage_package)/DEBIAN
-	$(INSTALL_DIR) debian/$(mkimage_package)/usr/share/doc/$(mkimage_package)/
-
-	$(INSTALL_FILE) debian/copyright \
-	    debian/$(mkimage_package)/usr/share/doc/$(mkimage_package)/
-	$(INSTALL_FILE) debian/changelog \
-	    debian/$(mkimage_package)/usr/share/doc/$(mkimage_package)/changelog.Debian
-
-	gzip -9f `find debian/$(mkimage_package)/usr/share/doc -type f ! -name "copyright"`
-	dpkg-gencontrol -ldebian/changelog -isp -p$(mkimage_package) -Tdebian/$(mkimage_package).substvars -Pdebian/$(mkimage_package)
-	cd debian/$(mkimage_package) && find * -type f ! -regex '^DEBIAN/.*' -print0 | xargs -r0 md5sum > DEBIAN/md5sums
-
-	chown -R root:root debian/$(mkimage_package)
-	chmod -R go=rX debian/$(mkimage_package)
-
-	dpkg --build debian/$(mkimage_package) ..
-
-
-	$(INSTALL_DIR) debian/$(env_package)/DEBIAN
-	$(INSTALL_DIR) debian/$(env_package)/usr/share/doc/$(env_package)/
-
-	$(INSTALL_FILE) debian/copyright \
-	    debian/$(env_package)/usr/share/doc/$(env_package)/
-	$(INSTALL_FILE) debian/changelog \
-	    debian/$(env_package)/usr/share/doc/$(env_package)/changelog.Debian
-
-	gzip -9f `find debian/$(env_package)/usr/share/doc -type f ! -name "copyright"`
-	dpkg-gencontrol -v$(tools_version) -ldebian/changelog -isp -p$(env_package) -Tdebian/$(env_package).substvars -Pdebian/$(env_package)
-	cd debian/$(env_package) && find * -type f ! -regex '^DEBIAN/.*' -print0 | xargs -r0 md5sum > DEBIAN/md5sums
-
-	chown -R root:root debian/$(env_package)
-	chmod -R go=rX debian/$(env_package)
-
-	dpkg --build debian/$(env_package) ..
 
 binary-arch:	checkroot build
 	$(checkdir)
