--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,8 @@ Vcs-Git: git://git.debian.org/collab-maint/u-boot.git
 Vcs-Browser: http://git.debian.org/?p=collab-maint/u-boot.git;a=summary
 
 Package: u-boot
-Architecture: armel armhf avr32 mips mipsel powerpc sh4
+Architecture: armel armhf avr32 mips powerpc sh4
+Multi-Arch: same
 Description: A boot loader for embedded systems
  Das U-Boot is a cross-platform bootloader for embedded systems,
  used as the default boot loader by several board vendors.  It is
@@ -19,6 +20,7 @@ Description: A boot loader for embedded systems
 
 Package: u-boot-tools
 Architecture: any
+Multi-Arch: foreign
 Depends: ${shlibs:Depends}
 Breaks: uboot-envtools (<< 20081215-3~),
         uboot-mkimage (<= 0.4build1),
