--- a/debian/rules
+++ b/debian/rules
@@ -14,7 +14,7 @@ DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
 
-ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH), armel armhf avr32 mips mipsel powerpc sh4))
+ifeq ($(DEB_HOST_ARCH),$(findstring $(DEB_HOST_ARCH), armel armhf avr32 mips powerpc sh4))
 u_boot_package := true
 endif
 
@@ -116,7 +116,7 @@ ifeq (true,$(u_boot_package))
 	$(INSTALL_FILE) debian/lintian.overrides \
 	    debian/$(package)/usr/share/lintian/overrides/$(package)
 
-	gzip -9f `find debian/$(package)/usr/share/doc -type f ! -name "copyright"`
+	gzip -9fn `find debian/$(package)/usr/share/doc -type f ! -name "copyright"`
 	dpkg-gencontrol -ldebian/changelog -isp -p$(package) -Tdebian/$(package).substvars -Pdebian/$(package)
 	cd debian/$(package) && find * -type f ! -regex '^DEBIAN/.*' -print0 | xargs -r0 md5sum > DEBIAN/md5sums
 
