--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,9 @@
 Source: u-boot
 Section: admin
 Priority: optional
-Maintainer: Clint Adams <clint@debian.org>
-Uploaders: Loïc Minier <lool@debian.org>, Micah Anderson <micah@debian.org>, Vagrant Cascadian <vagrant@debian.org>
+Maintainer: Vagrant Cascadian <vagrant@debian.org>
+Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
+Build-Depends: dctrl-tools
 Standards-Version: 3.9.4
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Git: git://anonscm.debian.org/collab-maint/u-boot.git
@@ -19,7 +20,7 @@ Description: A boot loader for embedded systems
  NIOS, and Microblaze.
 
 Package: u-boot-tools
-Architecture: any
+Architecture: linux-any
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}
 Breaks: uboot-envtools (<< 20081215-3~),
