--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
-Build-Depends: dctrl-tools
+Build-Depends: dctrl-tools, debhelper (>= 9)
 Standards-Version: 3.9.5
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Git: git://anonscm.debian.org/collab-maint/u-boot.git
@@ -12,6 +12,7 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/u-boot.git;a=summa
 Package: u-boot
 Architecture: armel armhf avr32 mips sh4
 Multi-Arch: same
+Depends: ${misc:Depends}
 Description: A boot loader for embedded systems
  Das U-Boot is a cross-platform bootloader for embedded systems,
  used as the default boot loader by several board vendors.  It is
@@ -22,7 +23,7 @@ Description: A boot loader for embedded systems
 Package: u-boot-tools
 Architecture: linux-any
 Multi-Arch: foreign
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Breaks: uboot-envtools (<< 20081215-3~),
         uboot-mkimage (<= 0.4build1),
         u-boot (<< 2010.12-2)
