--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
-Build-Depends: dctrl-tools
+Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.5
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Git: git://anonscm.debian.org/collab-maint/u-boot.git
@@ -12,6 +12,8 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/u-boot.git;a=summa
 Package: u-boot
 Architecture: armel armhf avr32 mips sh4
 Multi-Arch: same
+Depends: ${misc:Depends},
+ u-boot-imx [armhf], u-boot-omap [armhf], u-boot-sunxi [armhf], 
 Description: A boot loader for embedded systems
  Das U-Boot is a cross-platform bootloader for embedded systems,
  used as the default boot loader by several board vendors.  It is
@@ -19,10 +21,57 @@ Description: A boot loader for embedded systems
  supported architectures, including PPC, ARM, MIPS, x86, m68k,
  NIOS, and Microblaze.
 
+Package: u-boot-imx
+Architecture: armhf
+Multi-Arch: same
+Depends: ${misc:Depends}
+Breaks: u-boot (<< 2014.10~rc2+dfsg1-2~)
+Replaces: u-boot (<< 2014.10~rc2+dfsg1-2~)
+Description: A boot loader for imx systems
+ Das U-Boot is a cross-platform bootloader for embedded systems,
+ used as the default boot loader by several board vendors.  It is
+ intended to be easy to port and to debug, and runs on many
+ supported architectures, including PPC, ARM, MIPS, x86, m68k,
+ NIOS, and Microblaze.
+ .
+ This package includes boot loaders for various imx platforms.
+
+Package: u-boot-omap
+Architecture: armhf
+Multi-Arch: same
+Depends: ${misc:Depends}
+Breaks: u-boot (<< 2014.10~rc2+dfsg1-2~)
+Replaces: u-boot (<< 2014.10~rc2+dfsg1-2~)
+Description: A boot loader for omap systems
+ Das U-Boot is a cross-platform bootloader for embedded systems,
+ used as the default boot loader by several board vendors.  It is
+ intended to be easy to port and to debug, and runs on many
+ supported architectures, including PPC, ARM, MIPS, x86, m68k,
+ NIOS, and Microblaze.
+ .
+ This package includes boot loaders for various omap and related
+ platforms.
+
+Package: u-boot-sunxi
+Architecture: armhf
+Multi-Arch: same
+Depends: ${misc:Depends}
+Breaks: u-boot (<< 2014.10~rc2+dfsg1-2~)
+Replaces: u-boot (<< 2014.10~rc2+dfsg1-2~)
+Description: A boot loader for sunxi systems
+ Das U-Boot is a cross-platform bootloader for embedded systems,
+ used as the default boot loader by several board vendors.  It is
+ intended to be easy to port and to debug, and runs on many
+ supported architectures, including PPC, ARM, MIPS, x86, m68k,
+ NIOS, and Microblaze.
+ .
+ This package includes boot loaders for various Allwinner/sunxi
+ platforms.
+
 Package: u-boot-tools
 Architecture: linux-any
 Multi-Arch: foreign
-Depends: ${shlibs:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Breaks: uboot-envtools (<< 20081215-3~),
         uboot-mkimage (<= 0.4build1),
         u-boot (<< 2010.12-2)
