--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), bc
 Standards-Version: 3.9.5
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Git: git://anonscm.debian.org/collab-maint/u-boot.git
