--- a/debian/rules
+++ b/debian/rules
@@ -3,6 +3,7 @@
 DEB_HOST_ARCH ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
 DEB_HOST_GNU_TYPE  ?= $(shell dpkg-architecture -qDEB_HOST_GNU_TYPE)
 DEB_BUILD_GNU_TYPE ?= $(shell dpkg-architecture -qDEB_BUILD_GNU_TYPE)
+export DEBIAN_REVISION ?= $(shell dpkg-parsechangelog --show-field Version | sed -e 's,.*+dfsg,+dfsg,')
 
 ifneq ($(DEB_BUILD_GNU_TYPE),$(DEB_HOST_GNU_TYPE))
 export CROSS_COMPILE ?= $(DEB_HOST_GNU_TYPE)-
@@ -10,7 +11,7 @@ endif
 
 # support parallel build using DEB_BUILD_OPTIONS=parallel=N
 ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
-  MAKEFLAGS += -j$(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+  DEB_UBOOT_FLAGS += -j$(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 endif
 
 # the upstream build passes LDFLAGS directly to ld instead of calling gcc for
@@ -22,33 +23,59 @@ LDFLAGS := $(patsubst -Wl$(comma)%,%,$(LDFLAGS))
 %:
 	dh $@ --parallel
 
+override_dh_auto_build: TOOLSDIR := debian/build/tools
 override_dh_auto_build:
 	set -e; sed -n 's/^$(DEB_HOST_ARCH)[[:space:]]\+//p' debian/targets \
 	    | while read subarch platform targets; do \
-	        builddir=`pwd`/debian/build/$$platform; \
+	        builddir=debian/build/$$platform; \
+		targets="$$targets uboot.elf" ;\
 	        mkdir -p $$builddir; \
-		for target in $$targets ; do \
-	        $(MAKE) O=$$builddir $${platform}_defconfig; \
-		$(MAKE) O=$$builddir $$target; \
-		chmod -x $$builddir/$$target; \
-		done ; \
+		$(MAKE) O=$$builddir $${platform}_defconfig; \
+		$(MAKE) $(DEB_UBOOT_FLAGS) O=$$builddir all; \
 		install -m 644 $$builddir/u-boot $$builddir/uboot.elf; \
 	        $(CROSS_COMPILE)strip --remove-section=.comment \
 	            $$builddir/uboot.elf; \
-		$(MAKE) O=$$builddir HOSTCC=$(CROSS_COMPILE)gcc HOSTSTRIP=$(CROSS_COMPILE)strip env ; \
-		$(CROSS_COMPILE)strip --remove-section=.comment $$builddir/tools/env/fw_printenv ; \
-		ln -s fw_printenv $$builddir/tools/env/fw_setenv ; \
+		for target in $$targets; do \
+			chmod -x $$builddir/$$target; \
+			echo $$builddir/$$target /usr/lib/u-boot/$$platform/ \
+				>> debian/build/targets.$$subarch; \
+		done ; \
+	        case $${subarch} in \
+	        sunxi) builddir=$${builddir}_FEL ;\
+			targets="u-boot.bin spl/u-boot-spl.bin" ;\
+		        mkdir -p $$builddir ;\
+		        $(MAKE) O=$$builddir $${platform}_defconfig; \
+			sed -i -e 's/^CONFIG_SYS_EXTRA_OPTIONS="[^"]*/&,SPL_FEL/g' $$builddir/.config ;\
+			platform="$${platform}_FEL" ;\
+			$(MAKE) $(DEB_UBOOT_FLAGS) O=$$builddir $$targets ; \
+			for target in $$targets ; do \
+				chmod -x $$builddir/$$target; \
+				echo $$builddir/$$target /usr/lib/u-boot/$$platform/ \
+					>> debian/build/targets.$$subarch; \
+			done ;; \
+	        esac; \
 	done
 
-ifeq ($(CROSS_COMPILE),)
 	# Avoid requirement for .config
-	mkdir -p include/config
-	touch include/config/auto.conf
+	mkdir -p $(TOOLSDIR)/include/config
+	touch $(TOOLSDIR)/include/config/auto.conf
+	# Load dummy config
+	make O=$(TOOLSDIR) sandbox_defconfig
 	# board-independent tools
-	$(MAKE) HOSTCC=$(CROSS_COMPILE)gcc HOSTSTRIP=$(CROSS_COMPILE)strip \
+	$(MAKE) O=$(TOOLSDIR) $(DEB_UBOOT_FLAGS) \
+		HOSTCC=$(CROSS_COMPILE)gcc \
+		HOSTSTRIP=$(CROSS_COMPILE)strip \
+		NO_SDL=1 \
 	    tools-only
-	$(CROSS_COMPILE)strip --remove-section=.comment tools/mkimage
-endif
+	$(MAKE) O=$(TOOLSDIR) $(DEB_UBOOT_FLAGS) \
+		HOSTCC=$(CROSS_COMPILE)gcc \
+		HOSTSTRIP=$(CROSS_COMPILE)strip \
+		NO_SDL=1 \
+	    env
+	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/env/fw_printenv
+	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/mkimage
+	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/kwboot
+	$(CROSS_COMPILE)strip --remove-section=.comment $(TOOLSDIR)/tools/mksunxiboot
 
 override_dh_auto_test:
 	# skip tests.
