--- a/debian/control
+++ b/debian/control
@@ -96,6 +96,19 @@ Description: A boot loader for exynos systems
  .
  This package includes boot loaders for various Exynos platforms.
 
+Package: u-boot-rockchip
+Architecture: armhf
+Multi-Arch: same
+Depends: ${misc:Depends}
+Description: A boot loader for rockchip systems
+ Das U-Boot is a cross-platform bootloader for embedded systems,
+ used as the default boot loader by several board vendors.  It is
+ intended to be easy to port and to debug, and runs on many
+ supported architectures, including PPC, ARM, MIPS, x86, m68k,
+ NIOS, and Microblaze.
+ .
+ This package includes boot loaders for various Rockchip platforms.
+
 Package: u-boot-tools
 Architecture: linux-any
 Multi-Arch: foreign
