--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: admin
 Priority: optional
 Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
-Build-Depends: debhelper (>= 9), bc, device-tree-compiler, dpkg-dev (>= 1.17.0)
+Build-Depends: debhelper (>= 9), bc, device-tree-compiler, dpkg-dev (>= 1.17.0), u-boot-tools (>= 2015.10) [armhf] <cross>
 Standards-Version: 3.9.6
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Git: git://anonscm.debian.org/collab-maint/u-boot.git
@@ -114,6 +114,21 @@ Description: A boot loader for rockchip systems
  NIOS, and Microblaze.
  .
  This package includes boot loaders for various Rockchip platforms.
+ ${uboot:platforms}
+
+Package: u-boot-rpi
+Architecture: armel armhf
+Multi-Arch: same
+Depends: ${misc:Depends}
+Description: A boot loader for Raspberry PI systems
+ Das U-Boot is a cross-platform bootloader for embedded systems,
+ used as the default boot loader by several board vendors.  It is
+ intended to be easy to port and to debug, and runs on many
+ supported architectures, including PPC, ARM, MIPS, x86, m68k,
+ NIOS, and Microblaze.
+ .
+ This package includes boot loaders for various Raspberry PI
+ platforms.
  ${uboot:platforms}
 
 Package: u-boot-tools
