--- a/debian/rules
+++ b/debian/rules
@@ -57,6 +57,14 @@ override_dh_auto_build:
 				echo $$builddir/$$target /usr/lib/u-boot/$$platform/ \
 					>> debian/build/targets.$$subarch; \
 			done ;; \
+		rockchip) \
+			mkimage=$$builddir/tools/mkimage; \
+			test -x /usr/bin/mkimage && mkimage=/usr/bin/mkimage; \
+			$$mkimage -T rksd -n rk3288 \
+				-d $$builddir/spl/u-boot-spl-dtb.bin $$builddir/u-boot-spl-dtb.rksd; \
+			echo $$builddir/u-boot-spl-dtb.rksd /usr/lib/u-boot/$$platform/ \
+				>> debian/build/targets.$$subarch; \
+			;; \
 	        esac; \
 	done
 
