--- a/debian/control
+++ b/debian/control
@@ -144,6 +144,20 @@ Description: A boot loader for exynos systems
  This package includes boot loaders for various Exynos platforms.
  ${uboot:platforms}
 
+Package: u-boot-mvebu
+Architecture: arm64
+Multi-Arch: same
+Depends: ${misc:Depends}
+Description: A boot loader for marvell systems
+ Das U-Boot is a cross-platform bootloader for embedded systems,
+ used as the default boot loader by several board vendors.  It is
+ intended to be easy to port and to debug, and runs on many
+ supported architectures, including PPC, ARM, MIPS, x86, m68k,
+ NIOS, and Microblaze.
+ .
+ This package includes boot loaders for various Marvell platforms.
+ ${uboot:platforms}
+
 Package: u-boot-rockchip
 Architecture: armhf arm64
 Multi-Arch: same
