--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: u-boot
 Section: admin
 Priority: optional
-Maintainer: Vagrant Cascadian <vagrant@debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
 Build-Depends:
  bc,
@@ -18,7 +19,6 @@ Build-Depends:
  python:any [armhf arm64],
  skales:native [arm64],
  swig [armhf arm64],
- lzop [armhf] <!cross> | lzop:native [armhf] <cross>,
 Standards-Version: 4.3.0
 Homepage: http://www.denx.de/wiki/U-Boot/
 Vcs-Browser: https://salsa.debian.org/debian/u-boot
@@ -193,7 +193,7 @@ Description: A boot loader for Raspberry PI systems
 Package: u-boot-tools
 Architecture: linux-any
 Multi-Arch: foreign
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, binutils
 Recommends: device-tree-compiler
 Breaks: uboot-envtools (<< 20081215-3~),
         uboot-mkimage (<= 0.4build1),
