--- a/debian/rules
+++ b/debian/rules
@@ -27,6 +27,14 @@ endif
 comma := ,
 LDFLAGS := $(patsubst -Wl$(comma)%,%,$(LDFLAGS))
 
+# limit builds to only certain subarchitectures
+# e.g. pkg.uboot.subarch.rockchip will only build rockchip targets.
+ifeq (,$(filter pkg.uboot.subarch.%,$(DEB_BUILD_PROFILES)))
+TARGETSUBARCH = .
+else
+TARGETSUBARCH = $(patsubst pkg.uboot.subarch.%,%,$(filter pkg.uboot.subarch.%,$(DEB_BUILD_PROFILES)))
+endif
+
 %:
 	dh $@
 
@@ -53,6 +61,7 @@ override_dh_auto_build-indep: build-targets
 build-targets: configs/novena-rawsd_defconfig configs/am335x_boneblack_defconfig
 	echo run build-targets for $(TARGETARCH)
 	set -e; grep ^$(TARGETARCH)[^a-z0-9] debian/targets \
+	    | grep $(TARGETSUBARCH) \
 	    | while read arch subarch platform targets; do \
 	        builddir=debian/build/$$platform; \
 		case $$platform in \
@@ -102,9 +111,6 @@ build-targets: configs/novena-rawsd_defconfig configs/am335x_boneblack_defconfig
 	    case $${subarch} in \
 		rockchip) \
 			debian/bin/generate-rksd $$builddir $$platform $$subarch; \
-			;; \
-		qcom) \
-			debian/bin/generate-qcom $$builddir $$platform $$subarch; \
 			;; \
 	        esac; \
 	done
