--- a/debian/control
+++ b/debian/control
@@ -15,9 +15,9 @@ Build-Depends:
  libc6:arm64 [arm64] <cross>,
  libc6:armhf [armhf] <cross>,
  libc6:armel [armel] <cross>,
- libpython-dev:native [armhf arm64],
+ libpython2-dev:native [armhf arm64],
  libssl-dev,
- python:any [armhf arm64],
+ python2:any [armhf arm64],
  python-pyelftools [armhf arm64],
  skales:native [arm64],
  swig [armhf arm64],
