--- a/debian/rules
+++ b/debian/rules
@@ -91,15 +91,19 @@ override_dh_auto_build: configs/novena-rawsd_defconfig configs/am335x_boneblack_
 	# enable signatures
 	echo CONFIG_FIT=y >> configs/tools_defconfig
 	echo CONFIG_FIT_SIGNATURE=y >> configs/tools_defconfig
-	$(MAKE) V=$(VERBOSE) O=$(TOOLSDIR) CROSS_COMPILE=$(CROSS_COMPILE) tools_defconfig
+	$(MAKE) V=$(VERBOSE) O=$(TOOLSDIR) \
+		PYTHON=python2 \
+		CROSS_COMPILE=$(CROSS_COMPILE) tools_defconfig
 	cp $(TOOLSDIR)/.config $(TOOLSDIR)/config
 	# board-independent tools
 	$(MAKE) V=$(VERBOSE) O=$(TOOLSDIR) $(DEB_UBOOT_FLAGS) \
+		PYTHON=python2 \
 		CROSS_COMPILE=$(CROSS_COMPILE) \
 		CROSS_BUILD_TOOLS=$(cross_build_tools) \
 		NO_SDL=1 \
 	    tools-only
 	$(MAKE) V=$(VERBOSE) O=$(TOOLSDIR) $(DEB_UBOOT_FLAGS) \
+		PYTHON=python2 \
 		CROSS_COMPILE=$(CROSS_COMPILE) \
 		NO_SDL=1 \
 	    envtools
