--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
 Build-Depends:
+ arm-trusted-firmware (>= 2.2-3~) [arm64],
  bc,
  bison,
  debhelper-compat (= 12),
@@ -142,6 +143,7 @@ Description: A boot loader for omap systems
 Package: u-boot-sunxi
 Architecture: armhf arm64
 Multi-Arch: same
+Built-Using: ${uboot:Built-Using}
 Depends: ${misc:Depends}
 Recommends: arm-trusted-firmware [arm64], u-boot-tools [arm64]
 Breaks: u-boot (<< 2014.10~rc2+dfsg1-2~)
@@ -188,6 +190,7 @@ Description: A boot loader for marvell systems
 Package: u-boot-rockchip
 Architecture: armhf arm64
 Multi-Arch: same
+Built-Using: ${uboot:Built-Using}
 Depends: ${misc:Depends}
 Recommends: python3, arm-trusted-firmware [arm64], u-boot-tools [arm64]
 Description: A boot loader for rockchip systems
