--- a/debian/rules
+++ b/debian/rules
@@ -35,6 +35,8 @@ else
 TARGETSUBARCH = $(patsubst pkg.uboot.subarch.%,%,$(filter pkg.uboot.subarch.%,$(DEB_BUILD_PROFILES)))
 endif
 
+export OPENSBI=/usr/lib/riscv64-linux-gnu/opensbi/generic/fw_dynamic.elf
+
 %:
 	dh $@
 
