--- a/debian/rules
+++ b/debian/rules
@@ -38,11 +38,11 @@ endif
 %:
 	dh $@
 
-configs/novena-rawsd_defconfig:
+configs/novena-rawsd_defconfig: configs/novena_defconfig
 	sed -e 's,CONFIG_SPL_FS_FAT=y,# CONFIG_SPL_FS_FAT is not set,' \
 		configs/novena_defconfig > configs/novena-rawsd_defconfig
 
-configs/am335x_boneblack_defconfig:
+configs/am335x_boneblack_defconfig: configs/am335x_evm_defconfig
 	sed -e 's,CONFIG_OF_LIST=.*,CONFIG_OF_LIST="am335x-evm am335x-boneblack",g' \
 		configs/am335x_evm_defconfig > configs/am335x_boneblack_defconfig
 
@@ -118,10 +118,6 @@ build-targets: configs/novena-rawsd_defconfig configs/am335x_boneblack_defconfig
 
 build-tools:
 	$(MAKE) V=$(VERBOSE) O=$(TOOLSDIR) CROSS_COMPILE=$(CROSS_COMPILE) tools-only_defconfig
-	# Disable fit signatures, which requires OpenSSL which triggers
-	# licensing incompatibilities with the GPL:
-	# https://people.gnome.org/~markmc/openssl-and-the-gpl.html
-	sed -i -e 's,CONFIG_FIT_SIGNATURE=y,# CONFIG_FIT_SIGNATURE is not set,g' $(TOOLSDIR)/.config
 	cp $(TOOLSDIR)/.config $(TOOLSDIR)/config
 	# board-independent tools
 	$(MAKE) V=$(VERBOSE) O=$(TOOLSDIR) $(DEB_UBOOT_FLAGS) \
