--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,6 @@ Build-Depends:
  bison,
  debhelper-compat (= 13),
  device-tree-compiler,
- dpkg-dev (>= 1.17.14),
  flex,
  libfdt-dev:native [arm64],
  libc6:arm64 [arm64] <cross !pkg.uboot.notools>,
@@ -17,10 +16,11 @@ Build-Depends:
  libc6:armel [armel] <cross !pkg.uboot.notools>,
  libc6:riscv64 [riscv64] <cross !pkg.uboot.notools>,
  libpython3-dev:native [linux-any],
+ libssl-dev,
  python3:any [linux-any],
  python3-distutils [linux-any],
  swig [linux-any],
- lzop [armhf] <!cross> | lzop:native [armhf] <cross>,
+ lzop [armhf],
 Build-Depends-Indep:
 # For u-boot-qemu targets
  gcc-i686-linux-gnu [!i386],
@@ -30,7 +30,7 @@ Build-Depends-Indep:
  gcc-x86-64-linux-gnu [!amd64],
  gcc-powerpc-linux-gnu [!powerpc],
 Rules-Requires-Root: no
-Standards-Version: 4.5.0
+Standards-Version: 4.5.1
 Homepage: https://www.denx.de/wiki/U-Boot/
 Vcs-Browser: https://salsa.debian.org/debian/u-boot
 Vcs-Git: https://salsa.debian.org/debian/u-boot.git
