--- a/debian/rules
+++ b/debian/rules
@@ -68,6 +68,9 @@ build-targets: configs/novena-rawsd_defconfig configs/am335x_boneblack_defconfig
 		case $$platform in \
 			novena-rawsd) targets="$$targets" ;\
 				;; \
+			sifive_fu540) \
+				quilt pop riscv64/sifive-fu540-compressed-booti-support.patch ; \
+				;; \
 			*) targets="$$targets uboot.elf" ;\
 				;; \
 		esac;\
@@ -114,6 +117,11 @@ build-targets: configs/novena-rawsd_defconfig configs/am335x_boneblack_defconfig
 		cp $$builddir/.config $$builddir/config.$$platform; \
 		echo $$builddir/config.$$platform /usr/share/doc/$$subpackage/configs/ \
 			>> debian/build/targets.$$subarch; \
+		case $$platform in \
+			sifive_fu540) \
+				quilt push -a ;\
+				;; \
+		esac;\
 	done
 
 TOOLSDIR := debian/build/tools
