--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: u-boot
 Section: admin
 Priority: optional
-Maintainer: Vagrant Cascadian <vagrant@debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
 Build-Depends:
  arm-trusted-firmware (>= 2.4+dfsg) [arm64],
@@ -15,6 +16,7 @@ Build-Depends:
  libc6:armhf [armhf] <cross !pkg.uboot.notools>,
  libc6:armel [armel] <cross !pkg.uboot.notools>,
  libc6:riscv64 [riscv64] <cross !pkg.uboot.notools>,
+ opensbi (>= 0.9-1ubuntu2~),
  libpython3-dev:native [linux-any],
  libssl-dev,
  python3:any [linux-any],
@@ -22,6 +24,7 @@ Build-Depends:
  python3-pkg-resources [linux-any],
  swig [linux-any],
  lzop [armhf],
+ quilt [riscv64],
 Build-Depends-Indep:
 # For u-boot-qemu targets
  gcc-i686-linux-gnu [!i386],
@@ -210,6 +213,7 @@ Package: u-boot-rpi
 Architecture: armel armhf arm64
 Multi-Arch: same
 Depends: ${misc:Depends}
+Breaks: flash-kernel (<< 3.104)
 Description: A boot loader for Raspberry PI systems
  Das U-Boot is a cross-platform bootloader for embedded systems,
  used as the default boot loader by several board vendors.  It is
@@ -224,6 +228,7 @@ Description: A boot loader for Raspberry PI systems
 Package: u-boot-sifive
 Architecture: riscv64
 Multi-Arch: same
+Built-Using: ${uboot:Built-Using}
 Depends: ${misc:Depends}
 Description: A boot loader for SiFive systems
  Das U-Boot is a cross-platform bootloader for embedded systems,
