--- a/debian/rules
+++ b/debian/rules
@@ -32,6 +32,8 @@ else
 TARGETSUBARCH = $(patsubst pkg.uboot.subarch.%,%,$(filter pkg.uboot.subarch.%,$(DEB_BUILD_PROFILES)))
 endif
 
+export OPENSBI=/usr/lib/riscv64-linux-gnu/opensbi/generic/fw_dynamic.bin
+
 %:
 	dh $@
 
@@ -65,6 +67,9 @@ build-targets: configs/novena-rawsd_defconfig configs/am335x_boneblack_defconfig
 		esac; \
 		case $$platform in \
 			novena-rawsd) targets="$$targets" ;\
+				;; \
+			sifive_fu540) \
+				quilt pop riscv64/sifive-fu540-compressed-booti-support.patch ; \
 				;; \
 			*) targets="$$targets uboot.elf" ;\
 				;; \
@@ -112,6 +117,11 @@ build-targets: configs/novena-rawsd_defconfig configs/am335x_boneblack_defconfig
 		cp $$builddir/.config $$builddir/config.$$platform; \
 		echo $$builddir/config.$$platform /usr/share/doc/$$subpackage/configs/ \
 			>> debian/build/targets.$$subarch; \
+		case $$platform in \
+			sifive_fu540) \
+				quilt push -a ;\
+				;; \
+		esac;\
 	done
 
 TOOLSDIR := debian/build/tools
@@ -134,6 +144,11 @@ override_dh_auto_test-indep:
 
 # Do not spend time searching for an install target in Makefile.
 override_dh_auto_install:
+
+override_dh_strip:
+	# dh_strip tries to strip the cross compiled qemu images, which doesn't
+	# work
+	dh_strip -X qemu
 
 override_dh_clean:
 	rm -rf debian/build/
