--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,14 @@
 Source: u-boot
 Section: admin
 Priority: optional
-Maintainer: Vagrant Cascadian <vagrant@debian.org>
+Maintainer: Ubuntu Developers <ubuntu-devel-discuss@lists.ubuntu.com>
+XSBC-Original-Maintainer: Vagrant Cascadian <vagrant@debian.org>
 Uploaders: Loïc Minier <lool@debian.org>, Clint Adams <clint@debian.org>
 Build-Depends:
  arm-trusted-firmware (>= 2.5+dfsg) [arm64],
  bc,
  bison,
- crust-firmware (>= 0.3-2~) [arm64],
+#crust-firmware (>= 0.3-2~) [arm64],
  debhelper-compat (= 13),
  device-tree-compiler,
  flex,
@@ -236,6 +237,7 @@ Package: u-boot-rpi
 Architecture: armel armhf arm64
 Multi-Arch: same
 Depends: ${misc:Depends}
+Breaks: flash-kernel (<< 3.104)
 Description: A boot loader for Raspberry PI systems
  Das U-Boot is a cross-platform bootloader for embedded systems,
  used as the default boot loader by several board vendors.  It is
